src/styles/_summary.scss
.h5p-interactive-book {
  container-type: inline-size;
  container-name: interactive-book;

  &.h5p-interactive-book-small {
    .h5p-interactive-box-summary-progress {
      display: block;

      & > div {
        width: 100%;
        margin-bottom: 0.6rem;
      }
    }

    .h5p-interactive-book-summary-score-bar {
      margin-top: 1.25rem;
    }

    .h5p-interactive-book-summary-page {
      padding: 0.5rem;
    }
  }

  .h5p-interactive-book-summary-buttons {
    display: flex;

    .h5p-theme-primary-cta.h5p-theme-show-results{
      margin-right: 0.5em;
    }
  }
}

.h5p-interactive-book-summary {
  padding: 0 1.125rem;
  margin: 0.7rem auto;
}

.h5p-theme-show-results {
  &[data-book-completed="true"],
  &:active {
    outline: 2px ridge var(--h5p-theme-main-cta-base);
    border-radius: 4px;
    outline-offset: 2px;
  }
}

.h5p-interactive-book-summary-page {
  background-color: var(--h5p-theme-ui-base);
  padding: var(--h5p-theme-spacing-xl);

  ol,
  ul,
  li {
    padding-left: 0;
  }

  .h5p-interactive-box-summary-progress {
    display: flex;
    justify-content: space-between;
    gap: 1rem;
    color: #273C59;
    
    .h5p-interactive-book-summary-progress-container {
      background-color: var(--h5p-theme-ui-base);
      box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, 0.08);
      padding: var(--h5p-theme-spacing-s);
      box-sizing: border-box;
      border-radius: 5px;
      flex: 1;
      display: flex;
      align-items: center;

      .absolute-value {
        color: var(--h5p-theme-text-secondary);
        font-size: calc(var(--h5p-theme-font-size-xxl)*1.2);
      }

      .separator {
        color: var(--h5p-theme-text-third);
        font-size: 0.75em;
        margin: auto 0.2em;
        vertical-align: top;
      }
    }

    h3 {
      font-size: var(--h5p-theme-font-size-s);
      font-weight: bold;
      margin-top: 0;
      margin-bottom: 0;
      line-height: 1;
      color: var(--h5p-theme-text-primary);
    }

    .h5p-interactive-book-summary-progressbox-bigtext {
      font-size: calc(var(--h5p-theme-font-size-xxl)*1.2);
      color: var(--h5p-theme-text-primary);
      margin: var(--h5p-theme-spacing-s) auto;
      font-weight: bold;
    }

    .h5p-interactive-book-summary-progressbox-smalltext {
      font-size: var(--h5p-theme-font-size-s);
      color: var(--h5p-theme-text-third);
      line-height: 1;
      margin: 0;
    }
  }

  .h5p-interactive-book-summary-buttons {
    margin-top: var(--h5p-theme-spacing-l);
    flex-wrap: wrap;
    align-items: center;

    .h5p-interactive-book-summary-submitted {
      opacity: 0;
      border-radius: 4px;
      background-color: #d3ede9;
      display: flex;
      align-items: center;
      flex: auto;

      .icon-chapter-done {
        font-size: 2rem;
        margin: 0.5625rem 1rem;
        color: #0e8275;
      }

      p {
        font-weight: bold;
        margin: 0;
        font-size: 0.875rem;
        color: #0e8275;
        flex: 1;
      }
    }

    &.submitted {
      & > button {
        display: none;
      }

      .h5p-interactive-book-summary-submitted {
        transform: translateY(0);
        opacity: 1;
        position: static;
        button {
          display: flex;
        }
        margin-right: 0.5rem;
      }

      .h5p-interactive-book-summary-restart-button {
        display: flex;
      }
    }
  }

  .h5p-interactive-book-summary-overview-header {
    display: flex;
    align-items: center;
    justify-content: space-between;

    select {
      margin: auto 0 auto auto;
      max-height: 1.5rem;
    }
  }

  .h5p-interactive-book-summary-overview-list {
    display: flex;
    flex-direction: column;
    line-height: 1.9375rem;
  }

  .h5p-interactive-book-summary-overview-list-only-unanswered  {
    .h5p-interactive-book-summary-overview-section-details-task-done,
    .h5p-interactive-book-summary-no-interactions {
      display: none;
    }
  }

  .h5p-interactive-book-summary-overview-section {
    border: solid 1px var(--h5p-theme-stroke-1);
    border-radius: var(--h5p-theme-border-radius-large);
    padding: var(--h5p-theme-spacing-m);
    background-color: var(--h5p-theme-ui-base);
    margin: var(--h5p-theme-spacing-xs) 0;
    display: block;

    span[class^='icon-'],
    span[class*=' icon-'] {
      margin-right: var(--h5p-theme-spacing-xs);
      color: var(--h5p-theme-contrast-cta-white);
      font-weight: 100;
      cursor: pointer;
    }

    h4 {
      margin: 0;
      display: flex;
      align-items: center;
      color: var(--h5p-theme-text-primary);
      cursor: pointer;
      font-size: var(--h5p-theme-font-size-l);

      &:hover {
        color: var(--h5p-theme-contrast-cta-white);
      }
    }
  }

  .h5p-interactive-book-summary-overview-section:first-of-type,
  .h5p-interactive-book-summary-top-section {
    border-top-right-radius: var(--h5p-theme-border-radius-large);
    border-top-left-radius: var(--h5p-theme-border-radius-large);
  }

  .h5p-interactive-book-summary-overview-section:last-of-type,
  .h5p-interactive-book-summary-bottom-section {
    border-bottom-right-radius: var(--h5p-theme-border-radius-large);
    border-bottom-left-radius: var(--h5p-theme-border-radius-large);
  }

  .h5p-interactive-book-summary-overview-section-score-header {
    margin-left: auto;
    color: var(--h5p-theme-text-primary);
    font-size: var(--h5p-theme-font-size-s);
    font-weight: bold;
  }

  .h5p-interactive-book-summary-overview-list-empty {
    @extend .h5p-interactive-book-summary-overview-section;
    display: none;
  }

  .h5p-interactive-book-summary-overview-section-details {
    display: flex;
    border-top: 1px solid var(--h5p-theme-stroke-1);
    padding: 0.25rem;

    &:hover {
      background: var(--h5p-theme-contrast-cta-light);
    }

    & .h5p-interactive-book-summary-section-title {
      font-size: var(--h5p-theme-font-size-m);
      font-weight: 600;
      color: var(--h5p-theme-text-primary);
      border: 0;
      background-color: transparent;
      padding: 0;
      text-align: left;
      width: 100%;
      cursor: pointer;
    }

    & .h5p-interactive-book-summary-section-score {
      margin-left: auto;
      white-space: nowrap;
      color: var(--h5p-theme-text-primary);
      font-weight: bold;
      font-size: var(--h5p-theme-font-size-m);
    }
  }

  .h5p-interactive-book-summary-section-header {
    display: flex;
    align-items: center;
    margin-bottom: var(--h5p-theme-spacing-m);
  }

  .h5p-interactive-book-summary-section-icon {
    margin-right: 0.6125rem;
    color: var(--h5p-theme-contrast-cta-white);
    font-size: 0.8125rem;
    align-items: center;
    display: flex;
  }

  .h5p-interactive-book-summary-chapter-subheader {
    color: var(--h5p-theme-text-third);
    font-size: var(--h5p-theme-font-size-s);
    line-height: 0.9375rem;
  }

  .h5p-interactive-book-summary-progress-circle {
    width: calc(var(--h5p-theme-spacing-xl)*1.5);
    height: calc(var(--h5p-theme-spacing-xl)*1.5);
    min-height: calc(var(--h5p-theme-spacing-xl)*1.5);
    min-width: calc(var(--h5p-theme-spacing-xl)*1.5);
    border-radius: 50%;
    border: 6px solid var(--h5p-theme-ui-base);
    box-shadow: 0 0 0 1px var(--h5p-theme-stroke-1);
    margin-left: auto;
    position: relative;

    & canvas {
      position: absolute;
      max-width: 100%;
      max-height: 100%;
    }
  }

  .h5p-interactive-book-summary-score-bar {
    display: flex;
    justify-content: flex-end;
    margin-top: 3rem;
    display: none;
  }

  .h5p-interactive-book-summary-no-chapter-interactions {
    p:first-child {
      font-size: 1.2rem;
      font-weight: bold;
    }
  }
}

.h5p-interactive-book-summary-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: var(--h5p-theme-ui-base);
  height: 5rem;
  box-shadow: -5px -5px 10px rgba(166,166,166,0.4);
  display: flex;
  padding: 1rem;
  box-sizing: border-box;
  transform: translateY(120%);
  transition: transform 0.5s;
  z-index: 1;

  &.show-footer {
    transform: translateY(0);
  }

  &.menu-open {
    display: none;
  }

  button {
    flex: auto;
  }
}

.h5p-interactive-book-summary-dropdown {
  position: relative;
  max-width: 200px;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  background-color: var(--h5p-theme-ui-base);
  margin: auto 0.0625rem auto auto;
  font-size: 0.875rem;
  min-width: 12rem;
  margin-top: 1.5rem;

  & > button {
    cursor: pointer;
  }

  &[active]{

    .h5p-interactive-book-summary-dropdown-menu {
      display: block;
      box-shadow: 0 2px 3px 2px rgba(0,0,0,0.1);

      button {
        background-color: var(--h5p-theme-ui-base);
      }
    }

    button {
      background-color: #fafafa;
      cursor: pointer;
      text-align: left;
    }
  }

  .h5p-interactive-book-summary-dropdown-menu {
    position: absolute;
    list-style: none;
    display: none;
    left: 0;
    right: 0;
    overflow: hidden;
    cursor: pointer;
    background-color: inherit;
  }

  button {
    display: flex;
    width: 100%;
    border: 0;
    background: transparent;
    align-items: center;
    font-size: inherit;
    padding: 0.5rem 0.6875rem;

    .icon-expanded {
      margin-left: auto;
      font-size: 0.5rem;
    }
  }
}

.h5p-showing-summary .h5p-interactive-book-content {
  margin: 0;
}

/*specific styles for the summary page*/

.h5p-showing-summary.h5p-showing-summary .h5p-interactive-book-status:not(.h5p-interactive-book-status-footer) .h5p-interactive-book-status-main .h5p-interactive-book-status-info .h5p-interactive-book-status-chapter .title {
  color: var(--h5p-theme-contrast-cta) !important;
}

.h5p-showing-summary.h5p-showing-summary .h5p-interactive-book-status:not(.h5p-interactive-book-status-footer) .h5p-interactive-book-status-main .h5p-theme-progress {
  color: var(--h5p-theme-contrast-cta) !important;
}

.h5p-showing-summary.h5p-showing-summary .h5p-interactive-book-status-main,
.h5p-showing-summary.h5p-showing-summary .h5p-interactive-book-status .h5p-interactive-book-status-side {
  align-items: flex-start;
}

/* Stack summary boxes vertically if container < ~1029px (breakpoint made through ratio in js) to avoid squishing */
@container interactive-book (max-width: 1029px) {
  .h5p-fullscreen {
    .h5p-interactive-box-summary-progress {
      position: inherit;
      margin-top: initial;
    }
  }
  .h5p-interactive-box-summary-progress {
    flex-direction: column;
  }
}

